# GoMoChe

./: .ghci  .gitignore  .gitpod.Dockerfile  .gitpod.yml  GoMoChe.cabal  README.md  gossip.cabal
.github/workflows/: ci.yml
bench/: tables.hs
src/: Gossip.hs
src/Gossip/: Caas.hs  Causal.hs  Examples.hs  General.hs  Internal.hs  LocalProto.hs  Lucky.hs  Random.hs  Strengthening.hs  Tree.hs  Unreliable.hs  Visual.hs
src/Gossip/Examples/: Epistemicity.hs
test/: results.hs  results.lhs
