name:          GoMoChe
version:       0.1.0.0
synopsis:      Gossip Model Checking
description:   Tool to analyse (dynamic) gossip protocols, including an epistemic model checker. See README.md for related references.
homepage:      https://github.com/m4lvin/GoMoChe
license:       GPL-3
license-file:  LICENSE
author:        Malvin Gattinger
maintainer:    malvin@w4eg.de
category:      Logic
build-type:    Simple
cabal-version: >= 1.8

library
  ghc-options:      -Wall
  exposed-modules:  Gossip
                  , Gossip.Caas
                  , Gossip.Examples
                  , Gossip.General
                  , Gossip.LocalProto
                  , Gossip.Random
                  , Gossip.Strengthening
                  , Gossip.Tree
                  , Gossip.Visual
                  , Gossip.Internal
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , graphviz
                  , process
                  , QuickCheck
                  , temporary
                  , text

test-suite results
  type:             exitcode-stdio-1.0
  main-is:          results.hs
  ghc-options:      -Wall -threaded -with-rtsopts=-N
  hs-source-dirs:   test
  build-depends:    base
                  , GoMoChe
                  , hspec
                  , QuickCheck
                  , silently

benchmark tables
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          tables.hs
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.7 && < 5
                  , GoMoChe

source-repository head
  type:             git
  location:         https://github.com/m4lvin/gossip.git
