name:          gossip
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.8

library
  ghc-options:      -Wall -O2 -fobject-code
  exposed-modules:  Gossip
                  , Gossip.Examples
                  , Gossip.General
                  , Gossip.LocalProto
                  , Gossip.Random
                  , Gossip.Strengthening
                  , Gossip.Tree
                  , Gossip.Visual
                  , Gossip.Internal
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , graphviz
                  , parallel
                  , process
                  , QuickCheck
                  , temporary
                  , text

test-suite results
  type:             exitcode-stdio-1.0
  main-is:          results.lhs
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  build-depends:    base
                  , gossip
                  , hspec
                  , QuickCheck
